# cmake_cpp_basic_template

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  stdincludes.h
